# social-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 6e2bf6a611a7_create_votes_table.py  9375f9ce7b47_add_owner_fk_to_posts.py  99f8109aba33_create_user_table.py  b51a6967285d_create_posts_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: conftest.py  test_posts.py  test_users.py  test_votes.py
